--- a/test-xml/app/src/main/AndroidManifest.xml
+++ b/test-xml/app/src/main/AndroidManifest.xml
@@ -16,5 +16,5 @@
             </intent-filter>
         </activity>
     </application>
-
+    <permission android:name="android.permission.INTERNET" />
 </manifest>
